<resources>
    <string name="app_name">My Application</string>
    <string name="views_field">Views: </string>
    <string name="channel_name">Channel Name:</string>
    <string name="like">LIKE</string>
    <string name="channel_link">CHANNEL LINK</string>
    <string name="channel_details_page">CHANNEL DETAILS PAGE</string>
    <string name="sample_comment">Sample Comment</string>
    <string name="comments_section">COMMENTS SECTION</string>
    <string name="post_your_comments">POST YOUR COMMENTS</string>
    <string name="post_comment">POST COMMENT</string>
</resources>
