<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.shreeghanesh.myapplication.video.VideoResponseViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".video.MainActivity">

        <ImageView
            android:id="@+id/video_preview_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setImageIntoContainer="@{viewModel.imageUrl}" />

        <TextView
            android:id="@+id/views_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/views_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_preview_image"
            tools:text="Views: " />

        <TextView
            android:id="@+id/textve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@{viewModel.views}"
            app:layout_constraintStart_toEndOf="@id/views_field"
            app:layout_constraintTop_toBottomOf="@id/video_preview_image"
            tools:text="5" />

        <TextView
            android:id="@+id/channel_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:onClick="@{()->viewModel.navigateToChannelPage()}"
            android:text="@string/channel_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_preview_image"
            tools:text="CHANNEL LINK" />

        <Button
            android:id="@id/subscribe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.subscribeStatus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/channel_link" />

        <TextView
            android:id="@+id/channel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/channel_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/views_field"
            tools:text="Channel: " />

        <TextView
            android:id="@+id/channel_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@{viewModel.channelName}"
            app:layout_constraintStart_toEndOf="@id/channel_name"
            app:layout_constraintTop_toBottomOf="@id/textve"
            tools:text="Thoughtworks" />

        <Button
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v)->viewModel.onClick()}"
            android:text="@{viewModel.buttonText}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/channel_name_value"
            tools:text="LIKE" />

        <TextView
            android:id="@+id/post_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/post_your_comments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/like_button" />

        <EditText
            android:id="@+id/comments_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_standard"
            android:onTextChanged="@{(text, start, before, count)->viewModel.setUserComment(text)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_comments" />

        <Button
            android:id="@+id/post_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:onClick="@{()->viewModel.postUserComment()}"
            android:text="@string/post_comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comments_box" />


        <TextView
            android:id="@+id/comments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/comments_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_comment" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{viewModel.commentsRecyclerAdapter}"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comments_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>